# Magpie

./: .gitignore  CLAUDE.md  README.md  test_price.py
.github/workflows/: ci.yml  release.yml  tauri.yml
data/: city_codes.json  train_stations.json  user_config.json
doc/: business_plan.md  business_strategy.md  design.md  development_rules.md  development_rules_and_business.md  research.md  reverse_engineering_12306_and_tripmatch.md  testing_strategy.md
legacy_python/: pyproject.toml
legacy_python/scripts/: build_city_codes.py  consultation_cli.py  decision_engine.py  main.py  train_monitor.py
legacy_python/tests/: test_deepseek.py  test_flight_price.py  test_mcp.py  test_variflight_mcp.py
magpie_agent/: consultation_cli.py  decision_engine.py  flight_monitor.py  get_mcp_functions.js  package.json  pyproject.toml  test_flight_price.py  test_parse.py  test_variflight_mcp.py  train_monitor.py
magpie_core/: Cargo.toml
magpie_core/src/: main.rs
magpie_desktop/: package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  tsconfig.node.tsbuildinfo
magpie_desktop/src/: App.tsx  index.css
magpie_desktop/src-tauri/: Cargo.toml  tauri.conf.json
magpie_desktop/src-tauri/src/: commands.rs  daemon.rs  db.rs  decision.rs  lib.rs  main.rs  models.rs  queries.rs
magpie_desktop/src-tauri/src/fetchers/: flight.rs  mod.rs  train.rs
magpie_desktop/src/components/: Sidebar.tsx
magpie_desktop/src/pages/: AlertsPage.tsx  ChatPage.tsx  DashboardPage.tsx  PlansPage.tsx  SettingsPage.tsx
magpie_desktop/src/utils/: tauri.ts
magpie_desktop/tests/: SettingsPageObject.ts  settings.spec.ts
