[package]
name = "magpie_desktop"
version = "2.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "magpie_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "rustls-tls", "cookies"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
regex = "1.12.3"
dotenv = "0.15.0"
dotenvy = "0.15.7"

[profile.release]
panic = "abort" # 取消 panic 回溯，缩小体积并增加分析难度
codegen-units = 1 # 最强优化
lto = true # 跨 Crate 链接优化，提升代码运行速度的同时高度混杂结构
opt-level = "s" # 优先压缩体积
strip = true # 剔除所有的 debug 符号，防御普通的反编译调试
